--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Partner Zonder Papieren  
 header-img: img/home-bg.jpg
 email: contact@partnerzonderpapieren.nl
-description: "De verborgen wereld van interculturele liefde. interculturele relaties, illegale partner, vluchtelingen, gezinshereniging, verblijfsvergunning."
+description: "De verborgen wereld van grenzenloze liefde. interculturele relaties, illegale partner, vluchtelingen, gezinshereniging, verblijfsvergunning."
 baseurl: ""
 url: "http://partnerzonderpapieren.nl"
 twitter_username: partnerpapieren
